5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1764_762.log
== SUBMITION (2019-05-28 13:32:24) 
-- CODE:
rom numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.163981
-- ERROR:
  File "/home/codebench/codes/1764/762/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:32:25) 
-- CODE:
rom numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.140642
-- ERROR:
  File "/home/codebench/codes/1764/762/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:32:26) 
-- CODE:
rom numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
File "XXXX", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:32:33) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.511439
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:33:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:33:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = vm[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:33:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = vm[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.440886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 5, in <module>
    dia = data[:2]
NameError: name 'data' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:33:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = vm[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:33:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = vm[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.540644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 5, in <module>
    dia = data[:2]
NameError: name 'data' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:34:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
dt = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = vm[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.491989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 5, in <module>
    dia = data[:2]
NameError: name 'data' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:34:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.516575
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:34:56) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vm= array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = vm[mess]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:35:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mess = mes - 1
	mes1 = v[mess]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.473525
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:36:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.471189
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:36:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if(mes >= 1 and mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:37:16) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.370864
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:44:36) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(input(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro']))
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.348333
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 4, in <module>
    data = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:46:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(input(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro']))
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.466347
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 4, in <module>
    data = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:46:18) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(input(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.127827
-- ERROR:
  File "/home/codebench/codes/1764/762/main.py", line 4
    data = input()
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:46:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.345114
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:48:58) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:49:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.419925
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de dezembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de agosto de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de setembro de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:49:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.438927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = v[mes]
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:49:41) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:50:29) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.462817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = v[mes]
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:50:30) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:50:44) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:50:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:3])
ano = data[4:]
if( 1 <= mes <= 12):

	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:52:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:52:28) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:52:39) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:52:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:53:16) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:53:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:53:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[1:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:54:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:54:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:54:30) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:54:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.319858
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/762/main.py", line 10, in <module>
    mes1 = v[mes]
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:54:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes + 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:54:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")
dia = data[:2]
mes = int(data[2:4])
ano = data[4:]
if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
0.529206
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:12:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")

dia = data[:2]
mes = int(data[2:4])
ano = data[4:]

if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:12:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
v = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
data = input("dia,mes e ano:")

dia = data[:2]
mes = int(data[2:4])
ano = data[4:]

if( 1 <= mes <= 12):
	mes = mes - 1
	mes1 = v[mes]
print(dia,"de",mes1,"de",ano)
-- EXECUTION TIME:
1.85865
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
